2006-03-13  Kazu Hirata  <kazu@codesourcery.com>

	* doc/invoke.texi (-fdump-rtl-loop): Remove.
	(-dL, -fdump-rtl-loop2): Update the dump file names 

	* doc/invoke.texi: Update dump file names.

2006-03-12  Steven Bosscher  <stevenb.gcc@gmail.com>

	* predict.c (estimate_probability): Remove.
	* profile.c (rest_of_handle_branch_prob, pass_branch_prob): Remove.
	* basic-block.h (estimate_probability): Remove prototype.
	* passes.c (finish_optimization_passes): Dump branch prediction or
	profiling heuristics to the .profile tree dump.
	(init_optimization_passes): Unqueue pass_branch_prob.

	* doc/invoke.texi (-fdump-rtl-bp): Remove.

2006-03-11  Steven Bosscher  <stevenb.gcc@gmail.com>

	* rtl.def (LABEL_REF): Remove the field for LABEL_NEXTREF.
	* rtl.h (LABEL_NEXTREF): Remove field accessor.

2006-03-11  Eric Botcazou  <ebotcazou@adacore.com>

	* function.h (frame_offset_overflow): Declare.
	* function.c (frame_offset_overflow): New function.
	(assign_stack_local_1): Call it to detect that the offset overflows.
	* cfgexpand.c (alloc_stack_frame_space): Likewise.

2006-03-11  Steven Bosscher  <stevenb.gcc@gmail.com>

	* config/sh/sh.c: Include alloc-pool.h.
	(label_ref_list_pool): New alloc pool.
	(label_ref_list_t): New type for lists of labels.
	(struct pool_node): Make wend a label_ref_list_t.
	(add_constant): Use the new type, eradicate LABEL_NEXTREF
	references.
	(dump_table): Likewise.
	(sh_reorg): Set up the alloc pool before using add_constant and
	dump_table, and destroy it when finishing.

2006-03-11  Richard Sandiford  <richard@codesourcery.com>

	* config/mips/mips.c: Remove redundant comment.

2006-03-10  Jason Merrill  <jason@redhat.com>

	PR c/26004
	* gimplify.c (gimplify_modify_expr_rhs): Don't do return slot opt if 
	the target was declared 'register'.

2006-03-10  Adam Nemet  <anemet@caviumnetworks.com>

	* genpreds.c (write_insn_constraint_len): Change definition of
	insn_constraint_len to return size_t to match the declaration.
