@@ -1,3 +1,8 @@
+2006-03-13  Zdenek Dvorak <dvorakz@suse.cz>
+
+	* cfgloop.c (flow_loop_dump): Do not dump loop->invalid field.
+	* cfgloop.h (struct loop): Remove unused fields.
+
 2006-03-13  Kazu Hirata  <kazu@codesourcery.com>
 
 	* doc/invoke.texi (-fdump-rtl-loop): Remove.
